# YouTube-RAG-Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: ci.yml
config/: config.yaml
models/reranker/: logreg_reranker.pkl
src/answer_generator/: model_factory.py  rag_model.py
src/api/: main.py  server.py
src/core/abstractions/: embeddings.py  llm.py  vector_store.py
src/core/adapters/: db_vector_store.py
src/data_processing/: subtitle_extractor.py  subtitle_manager.py
src/integrations/: langchain_integration.py  langchain_vectorstore.py  lc_embedding_adapter.py  lc_reranker_runnable.py  lc_retriever_adapter.py
src/prompts/: prompt_en.txt  prompt_ru.txt
src/reranker/: features.py  ml_model.py  prepare_dataset.py  reranker.py  test_reranker_manual.py  trainer.py
src/search/: retriever.py
src/utils/: config_loader.py  db_connector.py  logger_loader.py  prompt_loader.py  subtitles_cleaner.py
tests/: test_config_loader.py  test_db_connector.py  test_db_vector_store.py  test_langchain_adapters.py  test_model_factory.py  test_prompt_loader.py  test_reranker.py  test_reranker_features.py  test_reranker_ml_model.py  test_reranking_pipeline.py  test_retriever.py  test_subtitle_manager.py
